# padrick

./: .coveragerc  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  README.org  README.rst  get_changelog.py  setup.cfg  setup.py  update_changelog.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  configuration-format-changes.md  documentation-enhancement.md  general-feature-request.md  new-generator.md
.github/workflows/: build_appimage.yml
docs/: Makefile  cli_doc.rst  conf.py  config_cookbook.rst  config_file.rst  getting_started.rst  hw_overview_and_integration.rst  index.rst  overview.rst
docs/figures/Illustrations/: Padrick_mux_ip_overview.xml  rtl_structure_pad_domain.xml  rtl_structure_pad_muxer.xml  rtl_structure_toplevel.xml
examples/: alsaqr_periph_padframe.yml  constraints_spec.yml  kraken_padframe.yml  sample_padframe.yaml
examples/modular_config/: common_pad_signals.yml  common_param_muxed_pads_count.yml  common_peripherals.yml  modular_config_top.yml  xilinx_virtex7_pads.yml  xilinx_virtex7_padtypes.yml
fuseSoC_generator/: padrick.core  padrick_generator.py
src/: reggen  topgen
src/padrick/: CLIEntryPoint.py  ConfigParser.py  skeleton.py
src/padrick/Generators/: CLI.py  CLIGeneratorCommands.py  GeneratorSettings.py  PadrickTemplate.py  TemplateRenderJob.py
src/padrick/Generators/ConstraintsGenerator/: ConstraintsGenerator.py  ConstraintsSpec.py
src/padrick/Generators/ConstraintsGenerator/Templates/: set_case_analysis.sdc.mako
src/padrick/Generators/DocGenerator/: DocGenerator.py
src/padrick/Generators/DocGenerator/Templates/: connectivity_matrix.dot.mako
src/padrick/Generators/DriverGenerator/: DriverGenerator.py
src/padrick/Generators/DriverGenerator/Templates/: driver.c.mako  driver.h.mako
src/padrick/Generators/FuseSoCGenerator/: FuseSoCGenerator.py  FuseSoCGeneratorConfigFileModel.py
src/padrick/Generators/RTLGenerator/: RTLGenerator.py  pad_domain.sv.mako  padframe.sv.mako  pads.sv.mako  pkg_pad_domain_internals.sv.mako  pkg_padframe.sv.mako  pkg_pads.sv.mako  regfile.hjson.mako
src/padrick/Generators/RTLGenerator/Templates/: Bender.yml.mako  FuseSoC.core.mako  assign.svh.mako  ips_list.yml.mako  pad_domain.sv.mako  pad_multiplexer.sv.mako  padframe.sv.mako  pads.sv.mako  pkg_pad_domain_internals.sv.mako  pkg_padframe.sv.mako  regfile.hjson.mako  src_files.yml.mako
src/padrick/Model/: CommonValidators.py  Constants.py  ExpressionLanguage.lark  PadDomain.py  PadInstance.py  PadSignal.py  PadType.py  Padframe.py  ParseContext.py  Port.py  PortGroup.py  SignalExpressionType.py  TemplatedDescription.py  TemplatedIdentifier.py  TemplatedIndexGrammar.py  TemplatedPortIdentifier.py  TemplatedString.py  UserAttrs.py  Utilities.py
src/padrick/Utils/: WorkingDir.py
src/reggen/: gen_dv.py  gen_rtl.py
src/yamlinclude/: constructor.py  readers.py  version.py
standalone_build/: .gitignore  Makefile  padrick.desktop  pyoxidizer.bzl
standalone_build/appdir/: .DirIcon  AppRun  padrick.desktop
tests/: conftest.py  test_skeleton.py
tests/rtl_tests/: .gitignore  Bender.yml  tb_testpadframe.sv  testpadframe.yaml
tests/rtl_tests/common/: tb_pads.sv
tests/tb_sources/: pddw04808.sv  tb_sample.sv
util/: vendor.py
